add StockNotFoundException